--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "santiago",
+  "name": "nombre-del-proyecto",
   "version": "1.0.0",
-  "main": "}",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Santiago Montano",
-  "license": "ISC",
-  "description": ""
+  "description": "Descripción del proyecto",
+  "main": "index.js",
+  "author": "Tu Nombre",
+  "license": "MIT"
 }
