lo cambie otra vez

--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "nombre-del-proyecto",
-  "version": "1.0.0",
-  "description": "Descripción del proyecto",
-  "main": "index.js",
-  "author": "Tu Nombre",
-  "license": "MIT"
+  "name": "fcc-learn-npm-package-json",
+  "author": "foobar",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "8.11.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://idontknow/todo.git"
+  }
 }
